Fixing check for httpTracingDisabled
- Using CONFIG_DISABLE_HTTP_TRACING_PROPERTY constant
- Changing testSimpleServlet as application is now only disabling http tracing and not otel.sdk therefore testSimpleServlet will not work anymore and now testing staticFile when http tracing is disabled
- Fixing formatting in server.xml to match